bridge/base/joomla-deployment.yaml
#! joomla-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: joomla
    namespace: pythonproject
    labels:
        com.docker.compose.project: pythonproject
        com.docker.compose.service: joomla
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: pythonproject
            com.docker.compose.service: joomla
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: pythonproject
                com.docker.compose.service: joomla
                com.docker.compose.network.joomla_network: "true"
        spec:
            containers:
                - name: joomla-web
                  image: joomla:latest
                  imagePullPolicy: IfNotPresent
                  args:
                    - /bin/bash
                    - -c
                    - sleep 10 && apache2-foreground
                  ports:
                    - name: joomla-80
                      containerPort: 80
                  volumeMounts:
                    - name: var-www-html
                      mountPath: /var/www/html
                    - name: usr-local-etc-php-conf-d-custom-php-ini
                      mountPath: /usr/local/etc/php/conf.d/custom-php.ini
            volumes:
                - name: var-www-html
                  persistentVolumeClaim:
                    claimName: joomla-joomla-data
                - name: usr-local-etc-php-conf-d-custom-php-ini
                  hostPath:
                    path: C:\Users\matys\PycharmProjects\PythonProject\joomla\custom-php.ini
