bridge/base/joomla-expose.yaml
#! joomla-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: joomla
    namespace: pythonproject
    labels:
        com.docker.compose.project: pythonproject
        com.docker.compose.service: joomla
spec:
    selector:
        com.docker.compose.project: pythonproject
        com.docker.compose.service: joomla
    ports:
        - name: joomla-80
          port: 80
          targetPort: joomla-80
