bridge/base/joomla-service.yaml
# check if there is at least one published port

#! joomla-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: joomla-published
    namespace: pythonproject
    labels:
        com.docker.compose.project: pythonproject
        com.docker.compose.service: joomla
spec:
    selector:
        com.docker.compose.project: pythonproject
        com.docker.compose.service: joomla
    ports:
        - name: joomla-8080
          port: 8080
          protocol: TCP
          targetPort: joomla-80

# check if there is at least one published port
