bridge/base/joomla_network-network-policy.yaml
#! joomla_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: joomla-network-network-policy
    namespace: pythonproject
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.joomla_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.joomla_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.joomla_network: "true"
